--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,6 @@ h2 {
 
 
 
-
 /* COLORS */
 /* #f47b4a orange */
 /* #e93182 pink */
@@ -34,6 +33,7 @@ h2 {
 
 
 /* COMPONENTS */
+
 .component {
   margin: 10px;
   padding: 0 15px 20px;
@@ -109,6 +109,20 @@ img { width: 250px; }
 
 
 
+/* STEPS */
+
+#step0,
+#step1,
+#step2,
+#step3 { display: none; }
+
+#step0.active,
+#step1.active,
+#step2.active,
+#step3.active { display: block; }
+
+
+
 /* STEP 1 - PLANNING MONEY */
 #done-step1 {
   /* unique NEXT button */
@@ -116,14 +130,11 @@ img { width: 250px; }
 }
 
 
-
 /* STEP 2 - BUNDLE SELECTIONS */
-#step2 { display: none; }
 
 
 
 /* STEP 3 - SUMMARY SUMMARY */
-#step3 { display: none; }
 
 .summary-list {
   margin-right: 20px;
