--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,16 @@
-/* TODO
-  - css for warning messages
-  - spacing for logo/components/footer
-  - legibility for Summary page */
+/*
+*** INDEX ***
+- GENERAL
+- COLORS
+- COMPONENTS
+- LOGO
+- TOP-BAR
+- STEPS
+- STEP 1
+- STEP 2
+- STEP 3
+- FOOTER
+*/
 
 
 
@@ -13,15 +22,37 @@ body {
   justify-content: space-around;
   align-items: center;
   min-height: 100vh;
-  background: linear-gradient(90deg, rgba(244,123,74,1) 30%, rgba(233,49,130,1) 100%);
+  background: linear-gradient(90deg, #f47b4a 30%, #e93182 100%);
   font-family: 'Segoe UI', 'Verdana', 'Arial', 'sans-serif';
   color: #fff;
   text-align: center;
+  transition: all 250ms ease-in-out;
 }
 
 h1,
 h2 {
   font-family: 'Segoe UI Light', 'SegoeLight';
+}
+
+h1 { margin: 0 0 10px; }
+
+h2 {
+  margin: 0;
+  margin-bottom: 30px;
+  position: relative;
+}
+
+h2::after {
+  content: "";
+  margin: 0 auto;
+  width: auto;
+  height: 3px;
+  position: absolute;
+  bottom: -15px;
+  left: 0;
+  right: 0;
+  background: -webkit-gradient(linear,left top,right top,from(#f47b4a),to(#e93182));
+  background: linear-gradient(to right, #f47b4a, #e93182);
 }
 
 
@@ -36,23 +67,31 @@ h2 {
 
 .component {
   margin: 10px;
-  padding: 0 15px 20px;
+  padding: 20px 15px;
   display: flex;
   flex-flow: column;
-  width: 300px;
+  max-width: 300px;
   background-color: rgba(0,0,0,0.6);
   border-radius: 10px;
 }
 
 .option-box {
-  margin: 10px 0;
+  margin: 0 0 10px;
   display: flex;
   justify-content: space-between;
 }
 
+.option-box p { margin: 0; }
+
 .option-box.vertical { display: block; }
 
-input { width: 75px; }
+.option-box.button { margin: 0; }
+
+
+input {
+  width: 70px;
+  padding: 3px;
+ }
 
 input:focus,
 select:focus {
@@ -68,7 +107,7 @@ button {
   padding-bottom: 14px;
   background: #e93182;
   filter: brightness(0.95);
-  border: 3px solid #ee596f;
+  border: none;
   border-radius: 6px;
   color: #fff;
   font-size: 16px;
@@ -95,17 +134,26 @@ button.back:focus {
   filter: brightness(1);
 }
 
+.bold {
+  font-weight: bold;
+}
+
 
 
 /* LOGO */
-img { width: 250px; }
+img {
+  margin-top: 25px;
+  width: 250px;
+}
 
 
 
 /* TOP BAR */
 .page-title { margin: 10px 0; }
 
-.top-bar p { margin: 5px 0; }
+#top-bar { margin-bottom: 20px; }
+
+#top-bar p { margin: 0; }
 
 
 
@@ -119,7 +167,7 @@ img { width: 250px; }
 #step0.active,
 #step1.active,
 #step2.active,
-#step3.active { display: block; }
+#step3.active { display: flex; }
 
 
 
@@ -135,14 +183,47 @@ img { width: 250px; }
 
 
 /* STEP 3 - SUMMARY SUMMARY */
+#summary-spent p,
+.summary-list p,
+#summary-bank p {
+  margin: 0;
+  display: inline-block;
+}
+
+#summary-spent { margin: 0; }
+
+.over,
+.under {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.over { color: red; }
+
+.under { color: lime; }
 
 .summary-list {
-  margin-right: 20px;
-  padding-left: 0;
+  padding: 0 10% 0;
   list-style-type: none;
   text-align: right;
+}
+
+#summary-total-spent {
+  margin-top: 13px;
+  position: relative;
+}
+
+#summary-total-spent::before {
+  content: "";
+  height: 3px;
+  position: absolute;
+  top: -6px;
+  left: 0;
+  right: 0;
+  background: linear-gradient(to right, #f47b4a, #e93182);
 }
 
 
 
 /* FOOTER */
+.footer { margin: 10px 0; }
